2002-10-15  Darin Adler  <darin@apple.com>

	Fix problem where timer was lasting after window was closed.

        * WebView.subproj/WebFramePrivate.m: (-[WebFrame _detachFromParent]):
	Add a call to [_private->bridge closeURL].

2002-10-15  Richard Williamson  <rjw@apple.com>

        Added attributed string to pasteboard.  Fixes 3006760.
        We may want to scale back the content that is included in the
        attributed string.  Currently all text nodes in the selection
        are converted.  This include text nodes for non-visible content,
        i.e. scripts.
        [Note we may also want to put HTML snippet on the pboard.  The appkit
        does support reading text using htmldisplay today.  Of course this should
        eventually migrate to use WebView.]
        
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView copy:]):

2002-10-15  Darin Adler  <darin@apple.com>

	Fixed bug where URLs dragged to the content area were not made canonical
	the way URLs dragged to the page address field are.

        * Misc.subproj/WebNSPasteboardExtras.m: (-[NSPasteboard _web_bestURL]):
	Make URLs canonical before returning them.

2002-10-15  Chris Blumenberg  <cblu@apple.com>

	If a file is renamed during download because a file of the same name already exists, show this in the UI.

        * Misc.subproj/WebDownloadHandler.h:
        * Misc.subproj/WebDownloadHandler.m:
        (-[WebDownloadHandler receivedResponse:]): added, create file here
        (-[WebDownloadHandler receivedData:]): don't create file here
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient handleDidFinishLoading:]): call [dataSource _setPrimaryLoadComplete:YES] for downloads
        (-[WebMainResourceClient handle:didReceiveResponse:]): call [WebDownloadHandler receivedResponse:]
        (-[WebMainResourceClient handle:didReceiveData:]): no download error to handle

2002-10-14  Chris Blumenberg  <cblu@apple.com>
